docs/api/qiskit-ibm-runtime/0.20/qiskit_ibm_runtime.options.EnvironmentOptions.mdx
---
title: EnvironmentOptions
description: API reference for qiskit_ibm_runtime.options.EnvironmentOptions
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_runtime.options.EnvironmentOptions
---

# EnvironmentOptions

<Class id="qiskit_ibm_runtime.options.EnvironmentOptions" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.20/qiskit_ibm_runtime/options/environment_options.py#L27-L62" signature="EnvironmentOptions(log_level='WARNING', callback=None, job_tags=<factory>)">
  Options related to the execution environment.

  **Parameters**

  *   **log\_level** (`str`) – logging level to set in the execution environment. The valid log levels are: `DEBUG`, `INFO`, `WARNING`, `ERROR`, and `CRITICAL`. The default level is `WARNING`.

  *   **callback** (`Optional`\[`Callable`]) –

      Callback function to be invoked for any interim results and final result. The callback function will receive 2 positional parameters:

      > 1.  Job ID
      > 2.  Job result.

  *   **job\_tags** (`Optional`\[`List`]) – Tags to be assigned to the job. The tags can subsequently be used as a filter in the `qiskit_ibm_runtime.qiskit_runtime_service.jobs()` function call.

  ## Attributes

  ### callback

  <Attribute id="qiskit_ibm_runtime.options.EnvironmentOptions.callback" name="callback" attributeTypeHint="Callable | None" attributeValue="= None" />

  ### log\_level

  <Attribute id="qiskit_ibm_runtime.options.EnvironmentOptions.log_level" name="log_level" attributeTypeHint="str" attributeValue="= 'WARNING'" />

  ### job\_tags

  <Attribute id="qiskit_ibm_runtime.options.EnvironmentOptions.job_tags" name="job_tags" attributeTypeHint="List | None" />

  ## Methods

  ### validate\_environment\_options

  <Function id="qiskit_ibm_runtime.options.EnvironmentOptions.validate_environment_options" name="validate_environment_options" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.20/qiskit_ibm_runtime/options/environment_options.py#L51-L62" signature="static validate_environment_options(environment_options)">
    Validate that environment options are legal. :raises ValueError: if log\_level is not in LogLevelType.

    **Return type**

    `None`
  </Function>
</Class>

